@@ -1,0 +1,46 @@
+; -*- mode: lisp; package: github -*-
+
+;;; github/utils/function.l
+;;
+;; Copyright (c) 2010 MIYAMUKO Katsuyuki.
+;;
+;; Permission is hereby granted, free of charge, to any person obtaining
+;; a copy of this software and associated documentation files (the
+;; "Software"), to deal in the Software without restriction, including
+;; without limitation the rights to use, copy, modify, merge, publish,
+;; distribute, sublicense, and/or sell copies of the Software, and to
+;; permit persons to whom the Software is furnished to do so, subject to
+;; the following conditions:
+;;
+;; The above copyright notice and this permission notice shall be
+;; included in all copies or substantial portions of the Software.
+;;
+;; THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+;; EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
+;; MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+;; NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
+;; LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
+;; OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
+;; WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+;;; Code:
+
+(eval-when (:compile-toplevel :load-toplevel :execute)
+  (mc-require "github/package")
+  )
+
+(in-package :github)
+
+;; Based on http://www.cliki.net/COMPOSE
+(defun compose (&rest functions)
+  (if functions
+      (reduce #'(lambda (f1 f2)
+                  (lambda (&rest args)
+                    (multiple-value-call f1 (apply f2 args))))
+              (remove-if #'null functions))
+    #'values))
+
+
+(provide "github/utils/function")
+
+;;; End
